--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="author" content="Mizael Santos">
     <meta name="robots" content="index, follow">
     <link rel="shortcut icon" href="assets/FaviconPessoal.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Mapa de Carreira</title>
 </head>
 
